# the-real-mle-challenge

./: .gitignore  Dockerfile  SOLUTIONS.md  config.yaml  pyproject.toml
reports/: metrics.json  reports.csv
src/api/: api_input.py  api_output.py  main.py
src/data/: data_split.py  utils.py
src/model/: model.py  random_forest_classifier.py
src/model/abc/: classifier.py
src/preprocess/: api_preprocess.py  preprocess.py  train_preprocess.py
src/train/: evaluation.py  main.py
tests/: conftest.py
tests/features/: test_build_features.py
tests/preprocess/: test_api_preprocess.py  test_train_preprocess.py
