[tool.poetry]
name = "the-real-mle-challenge"
version = "0.1.0"
description = ""
authors = ["isaacgg <isaac.gonzalezg91@gmail.com>"]
readme = "README.md"
packages = [{include = "the_real_mle_challenge"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.2"
pandas = "^2.1.3"
parameterized = "^0.9.0"
scikit-learn = "^1.3.2"
pyyaml = "^6.0.1"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

